# ComfyUI-PM-Nodes

./: README.md  __init__.py  dynamic_dropdown_node.py  if_branch_node.py  pyproject.toml  simple_math_node.py  virtual_nodes.py
locales/en/: main.json  nodeDefs.json
locales/zh/: main.json  nodeDefs.json
web/extensions/: dynamic_dropdown.js  pm_fast_bypasser.js  pm_fast_groups_bypasser.js  pm_fast_groups_muter.js  pm_fast_muter.js  pm_groups_shared.js
web/extensions/common/: i18n.js
