[project]
name = "pm-nodes"
description = "ComfyUI节点"
version = "0.0.2"
license = {file = "LICENSE"} 
# classifiers = [
#     # For OS-independent nodes (works on all operating systems)
#     "Operating System :: OS Independent",
#
#     # OR for OS-specific nodes, specify the supported systems:
#     "Operating System :: Microsoft :: Windows",  # Windows specific
#     "Operating System :: POSIX :: Linux",  # Linux specific
#     "Operating System :: MacOS",  # macOS specific
#
#     # GPU Accelerator support. Pick the ones that are supported by your extension.
#     "Environment :: GPU :: NVIDIA CUDA",    # NVIDIA CUDA support
#     "Environment :: GPU :: AMD ROCm",       # AMD ROCm support
#     "Environment :: GPU :: Intel Arc",      # Intel Arc support
#     "Environment :: NPU :: Huawei Ascend",  # Huawei Ascend support
#     "Environment :: GPU :: Apple Metal",    # Apple Metal support
# ]


[project.urls]
Repository = "https://github.com/pixel-magician/ComfyUI-PM-Nodes"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/pixel-magician/ComfyUI-PM-Nodes/wiki"
"Bug Tracker" = "https://github.com/pixel-magician/ComfyUI-PM-Nodes/issues"

[tool.comfy]
PublisherId = "pixel-magician"
DisplayName = "ComfyUI-PM-Nodes"
Icon = ""
includes = [] 
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility

